--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,125 @@
+/* Set body font globally */
 body {
-    color: red;
-}
-*,
-*::before,
-*::after {
-box-sizing: border-box;
-}
-
-* {
-margin: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+    background-color: hsl(0, 0%, 98%);
 }
 
-body {
-line-height: 1.5;
--webkit-font-smoothing: antialiased;
+  /* Center all text by default */
+.attribution {
+    text-align: center;
+    font-size: 11px;
+    color: hsl(228, 45%, 44%);
 }
 
-img,
-picture,
-video,
-canvas,
-svg {
-display: block;
-max-width: 100%;
+h1:first-of-type {
+    font-weight: 200;
+    color: hsl(234, 12%, 34%);
+}
+h1:last-of-type {
+    color: hsl(234, 12%, 34%);
 }
 
-input,
-button,
-textarea,
-select {
-font: inherit;
+.text {
+    text-align: center;
+    line-height: 0.8;
+    margin-bottom: 50px;
+    margin-top: 100px;
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-overflow-wrap: break-word;
+.text p {
+    margin: 0 auto;
+    line-height: 2;
+    color: hsl(229, 6%, 66%);
+}
+
+.column p {
+    color: hsl(229, 6%, 66%);
+}
+
+.column {
+    border-radius: 5px;
+    box-shadow: 0px 30px 40px -20px hsl(229, 6%, 66%);
+    padding: 30px;
+    margin: 20px;
+}
+
+img {
+    float: right;
+}
+
+.Team-Builder {
+    border-top: 3px solid red;
+}
+.Supervisor {
+    border-top: 3px solid cyan;
+}
+.Calculator {
+    border-top: 3px solid blue;
+}
+.Karma {
+    border-top: 3px solid orange;
+}
+
+h2 {
+    color: hsl(234, 12%, 34%);
+    font-weight: 600;
+}
+
+@media (max-width: 400px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 450px) {
+    .column {
+        height: 200px;
+    }
+}
+
+@media (max-width: 950px) and (min-width: 450px) {
+    .column {
+        text-align: center;
+        height: 200px;
+        
+    }
+}
+
+@media (max-width: 950px) and (min-width: 800px) {
+    .columns {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 2em;
+        grid-gap: 2em;
+    }
+}
+
+@media (min-width: 950px) {
+    .column1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .column2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .Supervisor, .Calculator {
+        position: relative;
+        top: 150px;
+    }
+
+    .column {
+        width: 20%;
+    }
+
+    .text p {
+        width: 30%;
+    }
 }
